--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base_generic.html" %}
 
+{% block title %}<title>Herbert-Macaulay Library</title>{% endblock %}
+
 {% block content %}
   <h1>Local Library Home</h1>
 <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em> and <em>Olanrewaju</em>!</p>
@@ -10,5 +12,7 @@
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
+    <li><strong>Genres:</strong> {{ num_of_genres }}</li>
+    <li><strong>Languages:</strong> {{ num_of_languages }}</li>
   </ul>
 {% endblock %}
