--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -14,5 +14,6 @@
     <li><strong>Authors:</strong> {{ num_authors }}</li>
     <li><strong>Genres:</strong> {{ num_of_genres }}</li>
     <li><strong>Languages:</strong> {{ num_of_languages }}</li>
+    <li><strong>Occurrence:</strong> {{ num_of_word_occurrence }}</li>
   </ul>
 {% endblock %}
