--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <h1>Local Library Home</h1>
-<p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em> and <em>Olanrewaju</em>!</p>
+  <p>Welcome to LocalLibrary, a website developed by <em>Mozilla Developer Network</em> and <em>Olanrewaju</em>!</p>
   <h2>Dynamic content</h2>
   <p>The library has the following record counts:</p>
   <ul>
@@ -16,4 +16,6 @@
     <li><strong>Languages:</strong> {{ num_of_languages }}</li>
     <li><strong>Occurrence:</strong> {{ num_of_word_occurrence }}</li>
   </ul>
+
+  <p> You have visited this page {{ num_visits }} time{{ num_visits|pluralize }}. </p>
 {% endblock %}
